<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.5</version>
        <relativePath/>
    </parent>

    <groupId>com.gentry</groupId>
    <artifactId>gentry-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>Gentry RBAC Scaffold</name>
    <description>多租户 RBAC 权限脚手架（Spring Boot 3 + MyBatis-Flex + Sa-Token + PostgreSQL）</description>

    <modules>
        <module>gentry-core</module>
        <module>gentry-business</module>
        <module>gentry-monitor</module>
        <module>gentry-start</module>
    </modules>

    <properties>
        <java.version>21</java.version>
        <mybatis-flex.version>1.11.6</mybatis-flex.version>
        <sa-token.version>1.38.0</sa-token.version>
        <flyway.version>9.22.3</flyway.version>
        <!-- 三种数据库驱动版本统一在这里管理，见 doc/guide/多数据库支持指南.md -->
        <postgresql.version>42.7.3</postgresql.version>
        <mysql.version>8.4.0</mysql.version>
        <sqlite-jdbc.version>3.45.1.0</sqlite-jdbc.version>
        <jacoco.version>0.8.15</jacoco.version>
        <!-- 新增依赖版本（Phase 0） -->
        <ip2region.version>2.7.0</ip2region.version>
        <easyexcel.version>3.3.4</easyexcel.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.gentry</groupId>
                <artifactId>gentry-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gentry</groupId>
                <artifactId>gentry-business</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.gentry</groupId>
                <artifactId>gentry-monitor</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <!--
              JaCoCo 覆盖率：每个子模块 mvn test 后在 target/site/jacoco/index.html 生成报告。
              此处只产出报告，不设置 90% 强制门禁，避免阻断构建；
              覆盖率达标核查见 AGENTS.md（Service ≥90%、分支 ≥80%）。
            -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>${jacoco.version}</version>
                <executions>
                    <execution>
                        <id>jacoco-prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>jacoco-report</id>
                        <phase>test</phase>
                        <goals>
                            <goal>report</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
